--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -5,7 +5,7 @@
 
   --background: #ffffff;
   --color: #410505; /* page title */
-  --color2: #1b0303; /* name title */
+  --color2: #040000; /* name title */
   --color3: #a11306; /* tab title */
 
   --color-anchor: #890e03;
